Fixing image path

--- a/src/pages/odyssey.astro
+++ b/src/pages/odyssey.astro
@@ -47,7 +47,7 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
           <p>After 10 years of war, Troy falls. Odysseus begins his journey home to Ithaca, but the gods have other plans...</p>
         </div>
         <div class="location-marker">
-          <img src="/me/public/troy-icon.png" alt="Troy" width="128" height="128" />
+          <img src="/me/troy-icon.png" alt="Troy" width="128" height="128" />
         </div>
       </div>
 
