--- a/src/pages/odyssey.astro
+++ b/src/pages/odyssey.astro
@@ -58,10 +58,7 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
           <p>Some of Odysseus' men eat the lotus flower and lose all desire to return home. They must be dragged back to the ships.</p>
         </div>
         <div class="location-marker">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <circle cx="12" cy="12" r="8" fill="#29adff"/>
-            <circle cx="12" cy="12" r="4" fill="#181425"/>
-          </svg>
+          <img src="/me/lotus.png" alt="Lotus Flower" width="128" height="128" />
         </div>
       </div>
 
@@ -72,11 +69,7 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
           <p>Trapped in the cave of the one-eyed giant, Odysseus blinds him with a wooden stake and escapes by hiding under sheep.</p>
         </div>
         <div class="location-marker">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <circle cx="12" cy="12" r="10" fill="#ff004d"/>
-            <circle cx="12" cy="10" r="2" fill="#181425"/>
-            <rect x="10" y="14" width="4" height="2" fill="#181425"/>
-          </svg>
+          <img src="/me/cyclops.png" alt="Cyclops" width="256" height="256" />
         </div>
       </div>
 
