--- a/src/pages/odyssey.astro
+++ b/src/pages/odyssey.astro
@@ -16,17 +16,7 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
       <div class="wave"></div>
       <div class="foam"></div>
     </div>
-    <!-- Swimming Men Animation -->
-    <div class="swimming-men" id="swimming-men">
-      <div class="swimmer"></div>
-      <div class="swimmer"></div>
-      <div class="swimmer"></div>
-      <div class="swimmer"></div>
-      <div class="splash"></div>
-      <div class="splash"></div>
-      <div class="splash"></div>
-      <div class="splash"></div>
-    </div>
+
     <div class="journey-track">
       <!-- Odysseus Character -->
       <div class="odysseus-character">       
@@ -65,6 +55,9 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
         <div class="location-marker">
           <img src="/me/troy-icon.png" alt="Troy" width="128" height="128" />
         </div>
+        <div class="encounter-animation" id="troy-animation">
+          <!-- Troy-specific animations can go here -->
+        </div>
       </div>
 
       <!-- Lotus-Eaters -->
@@ -76,6 +69,19 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
         <div class="location-marker">
           <img src="/me/lotus.png" alt="Lotus Flower" width="128" height="128" />
         </div>
+        <div class="encounter-animation" id="lotus-animation">
+          <!-- Swimming men animation -->
+          <div class="swimming-men">
+            <div class="swimmer"></div>
+            <div class="swimmer"></div>
+            <div class="swimmer"></div>
+            <div class="swimmer"></div>
+            <div class="splash"></div>
+            <div class="splash"></div>
+            <div class="splash"></div>
+            <div class="splash"></div>
+          </div>
+        </div>
       </div>
 
       <!-- Cyclops -->
@@ -86,6 +92,9 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
         </div>
         <div class="location-marker">
           <img src="/me/cyclops.png" alt="Cyclops" width="256" height="256" />
+        </div>
+        <div class="encounter-animation" id="cyclops-animation">
+          <!-- Cyclops-specific animations can go here -->
         </div>
       </div>
 
@@ -377,22 +386,22 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
   }
 
   .swimmer:nth-child(1) {
-    left: 15%;
+    left: 20%;
     animation-delay: 0s;
   }
 
   .swimmer:nth-child(2) {
-    left: 18%;
+    left: 40%;
     animation-delay: 0.5s;
   }
 
   .swimmer:nth-child(3) {
-    left: 21%;
+    left: 60%;
     animation-delay: 1s;
   }
 
   .swimmer:nth-child(4) {
-    left: 24%;
+    left: 80%;
     animation-delay: 1.5s;
   }
 
@@ -401,16 +410,16 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
       transform: translateY(0) translateX(0);
     }
     25% {
-      transform: translateY(-65px) translateX(10px);
+      transform: translateY(-50px) translateX(10px);
     }
     50% {
-      transform: translateY(-130px) translateX(0px);
+      transform: translateY(-100px) translateX(0px);
     }
     75% {
-      transform: translateY(-195px) translateX(10px);
+      transform: translateY(-150px) translateX(10px);
     }
     100% {
-      transform: translateY(-260px) translateX(0);
+      transform: translateY(-200px) translateX(0);
     }
   }
 
@@ -426,22 +435,22 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
   }
 
   .splash:nth-child(5) {
-    left: 16%;
+    left: 20%;
     animation-delay: 0.2s;
   }
 
   .splash:nth-child(6) {
-    left: 19%;
+    left: 40%;
     animation-delay: 0.7s;
   }
 
   .splash:nth-child(7) {
-    left: 22%;
+    left: 60%;
     animation-delay: 1.2s;
   }
 
   .splash:nth-child(8) {
-    left: 25%;
+    left: 80%;
     animation-delay: 1.7s;
   }
 
@@ -478,12 +487,37 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
 
   .encounter {
     position: relative;
-    margin: 0 150px;
+    margin: 0 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 200px;
+    min-width: 280px;
     top:-10%
+  }
+
+  .encounter-animation {
+    position: absolute;
+    bottom: -200px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 300px;
+    height: 200px;
+    pointer-events: none;
+    z-index: 5;
+  }
+
+  .encounter-animation .swimming-men {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+
+  .encounter-animation .swimming-men.active {
+    opacity: 1;
   }
 
   .location-marker {
@@ -581,7 +615,7 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
     const container = document.querySelector('.odyssey-container');
     const odysseus = document.querySelector('.odysseus-character');
     const encounters = document.querySelectorAll('.encounter');
-    const swimmingMen = document.querySelector('#swimming-men');
+    const lotusSwimmingMen = document.querySelector('#lotus-animation .swimming-men');
 
     if (!container || !odysseus) return;
 
@@ -630,12 +664,12 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
       
       // Trigger swimming animation when Odysseus reaches lotus-eaters
       if (closestEncounter && closestEncounter.id === 'lotus-eaters') {
-        if (swimmingMen) {
-          swimmingMen.classList.add('active');
+        if (lotusSwimmingMen) {
+          lotusSwimmingMen.classList.add('active');
         }
       } else {
-        if (swimmingMen) {
-          swimmingMen.classList.remove('active');
+        if (lotusSwimmingMen) {
+          lotusSwimmingMen.classList.remove('active');
         }
       }
     });
